// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> renders a MenuItem properly 1`] = `
.emotion-12 {
  box-sizing: border-box;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #25272D;
  padding: 0 1rem;
  white-space: nowrap;
}

.emotion-12:hover {
  background: #F8F9F9;
}

.emotion-12:active {
  background: #F2F2F2;
}

.emotion-12:focus {
  background: #F8F9F9;
}

.emotion-10 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  box-sizing: border-box;
  max-width: 100%;
  min-width: 120px;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.emotion-0 {
  color: grey;
  font-size: 16px;
  margin-right: 0.75rem;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #25272D;
  font-size: 0.875rem;
}

.emotion-8 {
  box-sizing: border-box;
  overflow: hidden;
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.8125rem;
}

<div
  aria-selected={false}
  className="emotion-12 emotion-13"
  height="40px"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="Menuitem"
  selected={false}
>
  <input
    css={
      Object {
        "border": "0",
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": "0",
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
    id="menu-item_clearance_state_ready_to_clear"
    name="clearance_state"
    type="hidden"
    value="ready_to_clear"
  />
  <div
    className="emotion-10 emotion-5"
    width="100%"
  >
    <div
      className="emotion-4 emotion-5"
      overflow="hidden"
    >
      <i
        className="ar ar-symbol-circle emotion-0 emotion-1"
        color="grey"
        fontSize="16px"
      />
      <p
        className="emotion-2 emotion-3"
        color="text.default"
        fontSize="size4"
      >
        Ready to Clear
      </p>
    </div>
    <div
      className="emotion-8 emotion-5"
      overflow="hidden"
    >
      <p
        className="emotion-6 emotion-3"
        color="text.muted"
        fontSize="size3"
      >
        mpd@catchandrelease.com
      </p>
    </div>
  </div>
</div>
`;

exports[`<MenuItem /> renders a selected MenuItem properly 1`] = `
.emotion-10 {
  box-sizing: border-box;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  box-sizing: border-box;
  max-width: 100%;
  min-width: 120px;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.emotion-0 {
  color: grey;
  font-size: 16px;
  margin-right: 0.75rem;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #25272D;
  font-size: 0.875rem;
}

.emotion-8 {
  box-sizing: border-box;
  overflow: hidden;
  padding-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.8125rem;
}

.emotion-12 {
  box-sizing: border-box;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #25272D;
  padding: 0 1rem;
  white-space: nowrap;
  color: #0F0F10;
  font-weight: 700;
}

.emotion-12:hover {
  background: #F8F9F9;
}

.emotion-12:active {
  background: #F2F2F2;
}

.emotion-12:focus {
  background: #F8F9F9;
}

<div
  aria-selected={true}
  className="emotion-12 emotion-13"
  height="40px"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="Menuitem"
  selected={true}
>
  <input
    css={
      Object {
        "border": "0",
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": "1px",
        "margin": "-1px",
        "overflow": "hidden",
        "padding": "0",
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": "1px",
      }
    }
    id="menu-item_clearance_state_ready_to_clear"
    name="clearance_state"
    type="hidden"
    value="ready_to_clear"
  />
  <div
    className="emotion-10 emotion-5"
    width="100%"
  >
    <div
      className="emotion-4 emotion-5"
      overflow="hidden"
    >
      <i
        className="ar ar-symbol-circle emotion-0 emotion-1"
        color="grey"
        fontSize="16px"
      />
      <p
        className="emotion-2 emotion-3"
        color="text.default"
        fontSize="size4"
      >
        Ready to Clear
      </p>
    </div>
    <div
      className="emotion-8 emotion-5"
      overflow="hidden"
    >
      <p
        className="emotion-6 emotion-3"
        color="text.muted"
        fontSize="size3"
      >
        mpd@catchandrelease.com
      </p>
    </div>
  </div>
</div>
`;
